--- a/main/core/admin/templates/settings/general_settings.html
+++ b/main/core/admin/templates/settings/general_settings.html
@@ -27,10 +27,6 @@
               <label for="{{ form.phone.id_for_label }}" class="form__controls-label"> <span>*</span>Номер телефона: </label>
               {{ form.phone }} {{ form.phone.errors }}
             </div>
-            <div class="form__group">
-              <label for="{{ form.phone_city.id_for_label }}" class="form__controls-label"> <span>*</span>Номер телефона городской: </label>
-              {{ form.phone_city }} {{ form.phone_city.errors }}
-            </div>
 
             <div class="form__group">
               <label for="{{ form.email.id_for_label }}" class="form__controls-label">Email: </label>
@@ -51,6 +47,10 @@
             <div class="form__group form__group-image">
               <label for="{{ form.logo.id_for_label }}" class="form__controls-label">Логотип:</label>
               {{ form.logo }} {{ form.logo.errors }}
+            </div>
+            <div class="form__group form__group-image">
+              <label for="{{ form.favicon.id_for_label }}" class="form__controls-label">Favicon:</label>
+              {{ form.favicon }} {{ form.favicon.errors }}
             </div>
           </div>
         </div>
