--- a/main/core/admin/templates/home-page/home-page.html
+++ b/main/core/admin/templates/home-page/home-page.html
@@ -12,7 +12,6 @@
       <div class="page__head">
         <div class="page__head-tab">
           <button type="button" data-name="basic" class="page__head-btn _active">Основные</button>
-          <button type="button" data-name="seo" class="page__head-btn">Поля SEO</button>
         </div>
         <button type="submit" class="form__btn">
           <img src="{% static 'theme/mb/images/admin/save.svg' %}" alt="" />
@@ -23,6 +22,7 @@
       <div class="page-content _show" id="basic">
         <div class="page-content__row">
           <div class="page-content__col">
+            {% include '../includes/form-group.html' with field=form.meta_h1 label='Заголовок h1' %}
             <div class="form__group">
               <label for="{{ form.meta_h1.id_for_label }}" class="form__controls-label"> Заголовок h1 : </label>
               {{ form.meta_h1 }} {{ form.meta_h1.errors }}
@@ -42,7 +42,8 @@
               {{ form.meta_description }} {{ form.meta_description.errors }}
             </div>
             <div class="form__group">
-              <label for="{{ form.meta_description.id_for_label }}" class="form__controls-label"> Мета keywords : </label>
+              <label for="{{ form.meta_description.id_for_label }}" class="form__controls-label"> Мета keywords :
+              </label>
               {{ form.meta_keywords }} {{ form.meta_keywords.errors }}
             </div>
           </div>
