--- a/main/core/admin/templates/shop/settings.html
+++ b/main/core/admin/templates/shop/settings.html
@@ -1,20 +1,15 @@
 {% extends 'admin_base.html' %}{% load static %} {% block body %}
 <div class="page">
   <div class="page__inner">
-    <div class="page__top">
-      <h1 class="page__title">Настройки товара</h1>
-      <ul class="admin-breadcrumbs">
-        <li><a href="{% url 'admin' %}">Панель управления</a></li>
-        <li>Настройки магазина</li>
-      </ul>
-    </div>
     <form action="." method="POST" class="form" enctype="multipart/form-data">
       <div class="page__head">
-        <div class="page__head-tab"></div>
-        <button type="submit" class="form__btn">
-          <img src="{% static 'theme/mb/images/admin/save.svg' %}" alt="" />
-          Сохранить
-        </button>
+        <div class="page__head-save">
+          <h1 class="page__title">Настройки магазина</h1>
+          <button type="submit" class="form__btn">
+            <img src="{% static 'theme/mb/images/admin/save.svg' %}" alt="" />
+            Сохранить
+          </button>
+        </div>
       </div>
       {% csrf_token %}
       <div class="page-content _show" id="seo">
@@ -37,16 +32,9 @@
               {{ form.meta_description }} {{ form.meta_description.errors }}
             </div>
             <div class="form__group">
-              <label for="{{ form.meta_description.id_for_label }}" class="form__controls-label"> Мета keywords : </label>
+              <label for="{{ form.meta_description.id_for_label }}" class="form__controls-label"> Мета keywords :
+              </label>
               {{ form.meta_keywords }} {{ form.meta_keywords.errors }}
-            </div>
-            <div class="form__group">
-              <label for="{{ form.delivery.id_for_label }}" class="form__controls-label">Минимальная стоимость доставки: </label>
-              {{ form.delivery }} {{ form.delivery.errors }}
-            </div>
-            <div class="form__group">
-              <label for="{{ form.description.id_for_label }}" class="form__controls-label">Текст : </label>
-              {{ form.description }} {{ form.description.errors }}
             </div>
           </div>
         </div>
