--- a/main/core/theme/mb/templates/pages/service/service.html
+++ b/main/core/theme/mb/templates/pages/service/service.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}
-Гравировка на памятниках, установка и благоустройство могил - Высокое качество и доступные цены
+Гравировка на памятниках, установка и благоустройство могил от мастерской Акрополь
 {% endblock %}
 {% block description %}
 Заказывайте профессиональные услуги по гравировке на памятниках, установке памятников и благоустройству могил.
