--- a/main/core/theme/mb/templates/pages/catalog/product.html
+++ b/main/core/theme/mb/templates/pages/catalog/product.html
@@ -1,11 +1,9 @@
 {% extends "base.html" %} {% load static %} {% load thumbnail %}
 {% block title %}
-Купить {{ product.name }} в Томске | Акрополь
+Купить памятник модель {{ product.model }} в Томске | Акрополь
 {% endblock %}
 {% block description %}
-Заказывайте профессиональные услуги по гравировке на памятниках, установке памятников и благоустройству могил.
-Гарантируем качественное выполнение работ, долговечность и аккуратность. Создайте достойную память о близких с
-"Акрополь"
+
 {% endblock %}
 {% block keywords %}
 гравировка на памятнике, установка памятников, благоустройство могил
