--- a/main/core/theme/mb/templates/pages/catalog/product.html
+++ b/main/core/theme/mb/templates/pages/catalog/product.html
@@ -2,11 +2,9 @@
 {% block title %}
 Купить памятник модель {{ product.model }} в Томске | Акрополь
 {% endblock %}
-{% block description %}
-
-{% endblock %}
+{% block description %}{% endblock %}
 {% block keywords %}
-гравировка на памятнике, установка памятников, благоустройство могил
+
 {% endblock %}
 {% block content %}
 
