--- a/main/core/theme/mb/templates/pages/catalog/category-details.html
+++ b/main/core/theme/mb/templates/pages/catalog/category-details.html
@@ -1,4 +1,15 @@
-{% extends "base.html" %} {% load shop_tags %} {% load thumbnail %}{% load static %}{% block content %}
+{% extends "base.html" %} {% load shop_tags %} {% load thumbnail %}{% load static %}
+{% block title %}
+Заказать фигурные памятники на могилу в Томске | Акрополь
+{% endblock %}
+{% block description %}
+Купить {{ category_name }} на могилу по выгодной цене в Томске от компании Акрополь. Заказать памятники можно по номеру
++7(900) 921-09-15 и +7(903) 955-40-18
+{% endblock %}
+{% block keywords %}
+
+{% endblock %}
+{% block content %}
 <main class="page">
   <section class="category-details">
     <div class="category-details__container">
@@ -25,9 +36,11 @@
           </form>
         </div>
         <div class="category-details__col">
-          <button type="button" class="category-details__filter"><i class="fa-solid fa-arrow-up-wide-short"></i></button>
+          <button type="button" class="category-details__filter"><i
+              class="fa-solid fa-arrow-up-wide-short"></i></button>
           {% if products %}
-          <div class="index-catalog__cards">{% for product in products %} {% include "../../includes/card.html" with product=product %} {% endfor %}</div>
+          <div class="index-catalog__cards">{% for product in products %} {% include "../../includes/card.html" with
+            product=product %} {% endfor %}</div>
           {% else %}
           <div class="empty-info">
             <p>Товара нет</p>
@@ -36,19 +49,18 @@
         </div>
       </div>
       <div class="pagging">
-        <a
-          href="{% if products.has_previous %}?{% chenge_params page=products.previous_page_number %}{% else %}#{% endif %}"
-          class="pagging__arrow {% if not products.has_previous%}disabled{% endif %}"
-          >«</a
-        >
+        <a href="{% if products.has_previous %}?{% chenge_params page=products.previous_page_number %}{% else %}#{% endif %}"
+          class="pagging__arrow {% if not products.has_previous%}disabled{% endif %}">«</a>
         <ul class="pagging__list">
-          {% for page in products.paginator.page_range %} {% if page >= products.number|add:-2 and page <= products.number|add:2 %}
-          <li>
-            <a href="?{% chenge_params page=page %}" class="pagging__item {% if products.number == page %}_active{% endif %}">{{page}}</a>
-          </li>
-          {% endif %} {% endfor %}
+          {% for page in products.paginator.page_range %} {% if page >= products.number|add:-2 and page <=
+            products.number|add:2 %} <li>
+            <a href="?{% chenge_params page=page %}"
+              class="pagging__item {% if products.number == page %}_active{% endif %}">{{page}}</a>
+            </li>
+            {% endif %} {% endfor %}
         </ul>
-        <a href="{% if products.has_next %}?{% chenge_params page=products.next_page_number %}{% else %}#{% endif %}" class="pagging__arrow">»</a>
+        <a href="{% if products.has_next %}?{% chenge_params page=products.next_page_number %}{% else %}#{% endif %}"
+          class="pagging__arrow">»</a>
       </div>
     </div>
   </section>
