--- a/main/core/theme/mb/templates/pages/catalog/category-details.html
+++ b/main/core/theme/mb/templates/pages/catalog/category-details.html
@@ -52,8 +52,8 @@
         <a href="{% if products.has_previous %}?{% chenge_params page=products.previous_page_number %}{% else %}#{% endif %}"
           class="pagging__arrow {% if not products.has_previous%}disabled{% endif %}">«</a>
         <ul class="pagging__list">
-          {% for page in products.paginator.page_range %} {% if page >= products.number|add:-2 and page <=
-            products.number|add:2 %} <li>
+          {% for page in products.paginator.page_range %}
+          {% if page >= products.number|add:-2 and page <= products.number|add:2 %} <li>
             <a href="?{% chenge_params page=page %}"
               class="pagging__item {% if products.number == page %}_active{% endif %}">{{page}}</a>
             </li>
