--- a/main/core/theme/mb/templates/pages/catalog/category-details.html
+++ b/main/core/theme/mb/templates/pages/catalog/category-details.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% load shop_tags %} {% load thumbnail %}{% load static %}
 {% block title %}
-Заказать фигурные памятники на могилу в Томске | Акрополь
+Заказать {{ category_name }} на могилу в Томске | Акрополь
 {% endblock %}
 {% block description %}
 Купить {{ category_name }} на могилу по выгодной цене в Томске от компании Акрополь. Заказать памятники можно по номеру
@@ -39,8 +39,8 @@
           <button type="button" class="category-details__filter"><i
               class="fa-solid fa-arrow-up-wide-short"></i></button>
           {% if products %}
-          <div class="index-catalog__cards">{% for product in products %} {% include "../../includes/card.html" with
-            product=product %} {% endfor %}</div>
+          <div class="index-catalog__cards">{% for product in products %}
+            {% include "../../includes/card.html" with product=product %} {% endfor %}</div>
           {% else %}
           <div class="empty-info">
             <p>Товара нет</p>
