--- a/main/core/theme/mb/templates/pages/catalog/category-details.html
+++ b/main/core/theme/mb/templates/pages/catalog/category-details.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% load shop_tags %} {% load thumbnail %}{% load static %}
 {% block title %}
-Заказать {{ category_name }} на могилу в Томске | Акрополь
+Заказать {{ category_name }} памятников на могилу в Томске | Акрополь
 {% endblock %}
 {% block description %}
 Купить {{ category_name }} на могилу по выгодной цене в Томске от компании Акрополь. Заказать памятники можно по номеру
