--- a/main/core/theme/mb/templates/pages/catalog/category-details.html
+++ b/main/core/theme/mb/templates/pages/catalog/category-details.html
@@ -1,19 +1,19 @@
 {% extends "base.html" %} {% load shop_tags %} {% load thumbnail %}{% load static %}
 {% block title %}
-Заказать {{ category_name }} памятников на могилу в Томске | Акрополь
+Заказать {{ category.name }} памятников на могилу в Томске | Акрополь
 {% endblock %}
 {% block description %}
-Купить {{ category_name }} на могилу по выгодной цене в Томске от компании Акрополь. Заказать памятники можно по номеру
+Купить {{ category.name }} на могилу по выгодной цене в Томске от компании Акрополь. Заказать памятники можно по номеру
 +7(900) 921-09-15 и +7(903) 955-40-18
 {% endblock %}
 {% block keywords %}
-
+{{ category.keywords }}
 {% endblock %}
 {% block content %}
 <main class="page">
   <section class="category-details">
     <div class="category-details__container">
-      <h1 class="category-details__title _title">Категория - {{ category_name }}</h1>
+      <h1 class="category-details__title _title">Категория - {{ category.name }}</h1>
       <div class="category-details__row">
         <div class="category-details__col" id="filter-category">
           <button type="button" class="close popup__close" id="close-filter"><span></span></button>
