--- a/main/core/theme/mb/templates/pages/catalog/category-details.html
+++ b/main/core/theme/mb/templates/pages/catalog/category-details.html
@@ -7,7 +7,7 @@
 +7(900) 921-09-15 и +7(903) 955-40-18
 {% endblock %}
 {% block keywords %}
-{{ category.keywords }}
+{{ category.meta_keywords }}
 {% endblock %}
 {% block content %}
 <main class="page">
