--- a/main/core/admin/templates/shop/category/category_edit.html
+++ b/main/core/admin/templates/shop/category/category_edit.html
@@ -51,12 +51,8 @@
               {{ form.image }} {{ form.image.errors }}{{ image_path }}
             </div>
             <div class="form__group-checkbox">
-              {{ form.menu_add }} {{ form.menu_add.errors }}
-              <label for="{{ form.menu_add.id_for_label }}" class="form__controls-label"> Отображать в меню ? :</label>
-            </div>
-            <div class="form__group-checkbox">
-              {{ form.first_block_home }} {{ form.first_block_home.errors }}
-              <label for="{{ form.first_block_home.id_for_label }}" class="form__controls-label">Выводить на главной странице ? : </label>
+              {{ form.add_menu }} {{ form.add_menu.errors }}
+              <label for="{{ form.add_menu.id_for_label }}" class="form__controls-label"> Отображать в меню ? :</label>
             </div>
           </div>
         </div>
