--- a/main/core/theme/mb/templates/pages/service/service.html
+++ b/main/core/theme/mb/templates/pages/service/service.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}
-Гравировка на памятниках, установка и благоустройство могил от мастерской Акрополь
+Мемориальные услуги компании Акрополь
 {% endblock %}
 {% block description %}
 Заказывайте профессиональные услуги по гравировке на памятниках, установке памятников и благоустройству могил.
@@ -9,7 +9,7 @@
 "Акрополь"
 {% endblock %}
 {% block keywords %}
-гравировка на памятнике, установка памятников, благоустройство могил
+ритуальные услуги томск, мемориальные услуги, ритуальные услуги,
 {% endblock %}
 {% block content %}
 
