--- a/main/core/theme/mb/templates/pages/service/service.html
+++ b/main/core/theme/mb/templates/pages/service/service.html
@@ -9,7 +9,7 @@
 "Акрополь"
 {% endblock %}
 {% block keywords %}
-ритуальные услуги томск, мемориальные услуги, ритуальные услуги,
+ритуальные услуги томск, мемориальные услуги, ритуальные услуги
 {% endblock %}
 {% block content %}
 
