--- a/main/core/theme/mb/templates/pages/service/service-test.html
+++ b/main/core/theme/mb/templates/pages/service/service-test.html
@@ -3,12 +3,11 @@
 Установка памятников на могилу в Томске | Акрополь
 {% endblock %}
 {% block description %}
-Заказывайте профессиональные услуги по гравировке на памятниках, установке памятников и благоустройству могил.
-Гарантируем качественное выполнение работ, долговечность и аккуратность. Создайте достойную память о близких с
-"Акрополь"
+Компания "Акрополь" предлагает качественные услуги по установке памятников, надгробий, лавочек и столов. Сохраните
+память о ваших близких с заботой и уважением.
 {% endblock %}
 {% block keywords %}
-ритуальные услуги томск, мемориальные услуги, ритуальные услуги
+установка памятника, установка памятников томск, установка памятника на могилу
 {% endblock %}
 {% block content %}
 
