--- a/main/core/theme/mb/templates/pages/service/service-test.html
+++ b/main/core/theme/mb/templates/pages/service/service-test.html
@@ -3,7 +3,7 @@
 Установка памятников на могилу в Томске | Акрополь
 {% endblock %}
 {% block description %}
-Компания "Акрополь" предлагает качественные услуги по установке памятников, надгробий, лавочек и столов. Сохраните
+Компания Акрополь предлагает качественные услуги по установке памятников, надгробий, лавочек и столов. Сохраните
 память о ваших близких с заботой и уважением.
 {% endblock %}
 {% block keywords %}
