--- a/main/core/theme/mb/templates/pages/service/service_grav.html
+++ b/main/core/theme/mb/templates/pages/service/service_grav.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% load static %}
 {% block title %}
-Установка памятников на могилу в Томске | Акрополь
+Гравировка на памятник в Томске | Акрополь
 {% endblock %}
 {% block description %}
 Закажите качественную гравировку на памятник в Томске.
