--- a/main/core/theme/mb/templates/pages/delivery.html
+++ b/main/core/theme/mb/templates/pages/delivery.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load thumbnail %}
 {% block title %}
-Доставка и оплата | Акрополь
+Доставка и оплата в Томске | Акрополь
 {% endblock %}
 {% block description %}
 Оплатить можно любым доступным способом, наличными, картой, переводом, QR-кодом и т.д. Так же компания «Акрополь»
