--- a/main/core/theme/mb/templates/pages/contact.html
+++ b/main/core/theme/mb/templates/pages/contact.html
@@ -1,4 +1,15 @@
-{% extends 'base.html' %} {% load static %} {% block content %}
+{% extends 'base.html' %} {% load static %} 
+{% block title %}
+Контактная информация | Акрополь
+{% endblock %}
+{% block description %}
+Контактная информация мастерской Акрополь в городе Томск. Адреса, график работы, почта, номера телефонов, реквизиты. 
+Телефоны для связи +7(900) 921-09-15, +7(903) 955-40-18
+{% endblock %}
+{% block keywords %}
+контакты акрополь, контактная информация акрополь, номер телефона акрополь, телефон акрополь
+{% endblock %}
+{% block content %}
 
 <main>
 	<div class="contact">
