--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -2997,14 +2997,25 @@ body::after {
   padding: 60px 0px;
 }
 
+.category-details__head {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 40px;
+}
+
+.category-details .breadcrumbs {
+  margin: 0px;
+}
+
 .category-details__title {
   font-size: 25px;
   font-weight: 700;
   font-family: "Inter", sans-serif;
   text-align: center;
-  margin-bottom: 40px;
   text-wrap: balance;
   line-height: 140%;
+  margin-bottom: 0px;
 }
 
 .category-details__row {
