--- a/main/core/theme/mb/templates/pages/catalog/category-details.html
+++ b/main/core/theme/mb/templates/pages/catalog/category-details.html
@@ -13,7 +13,21 @@
 <main class="page">
   <section class="category-details">
     <div class="category-details__container">
-      <h1 class="category-details__title _title">Категория - {{ category.name }}</h1>
+      <div class="category-details__head">
+        <h1 class="category-details__title _title">Категория - {{ category.name }}</h1>
+        <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
+          <a href="{% url 'category' %}" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
+            class="breadcrumbs__item">
+            Каталог
+            <meta itemprop="position" content="1" />
+          </a>
+          <a href="{{ product.category.get_absolute_url }}" itemprop="itemListElement" itemscope=""
+            itemtype="http://schema.org/ListItem" class="breadcrumbs__item">
+            {{ category.name }}
+            <meta itemprop="position" content="2" />
+          </a>
+        </div>
+      </div>
       <div class="category-details__row">
         <div class="category-details__col" id="filter-category">
           <button type="button" class="close popup__close" id="close-filter"><span></span></button>
