--- a/#src/scss/main.scss
+++ b/#src/scss/main.scss
@@ -204,6 +204,9 @@ body {
 @import './pages/orders/create';
 @import './pages/orders/succes';
 
+@import './pages/blog/blog';
+@import './pages/blog/blog-detail';
+
 @import './pages/catalog/category-details';
 @import './pages/catalog/product';
 
