--- a/#src/templates/theme/pages/delivery.html
+++ b/#src/templates/theme/pages/delivery.html
@@ -1,9 +1,16 @@
 {% extends "base.html" %}
 {% load static %}
 {% load thumbnail %}
-{% block title %}{{ delivery_page.meta_title }}{% endblock %}
-{% block description %}{{ delivery_page.meta_description }}{% endblock %}
-{% block keywords %}{{ delivery_page.meta_keywords }}{% endblock %}
+{% block title %}
+Доставка и оплата в Томске | Акрополь
+{% endblock %}
+{% block description %}
+Оплатить можно любым доступным способом, наличными, картой, переводом, QR-кодом и т.д. Так же компания «Акрополь»
+предоставляет беспроцентную рассрочку до 12 месяцев. При оформлении рассрочки, акции и скидки не действуют.
+{% endblock %}
+{% block keywords %}
+доставка памятников, оплата памятников, доставка надгробий, опалата памятника на могилу
+{% endblock %}
 {% block content %}
 <main>
   <div class="hero">
