--- a/#src/templates/theme/pages/about.html
+++ b/#src/templates/theme/pages/about.html
@@ -1,4 +1,15 @@
-{% extends 'base.html' %} {% load static %} {% block content %}
+{% extends 'base.html' %} {% load static %}
+{% block title %}
+О компании | Акрополь в Томске
+{% endblock %}
+{% block description %}
+Компания Акрополь является одним из лидеров изготовления и продажи изделий из натурального гранита в Томской области.
+Основанная в 2010 году, компания уже более 10 лет успешно работает на внутреннем рынке России.
+{% endblock %}
+{% block keywords %}
+наши работы, портфолио памятников на могилу, фотографии памятников на могилу
+{% endblock %}
+{% block content %}
 <main class="page">
   <div class="hero">
     <div class="hero__container">
