--- a/#src/templates/theme/pages/gallery.html
+++ b/#src/templates/theme/pages/gallery.html
@@ -1,11 +1,23 @@
-{% extends 'base.html' %} {% load static %}{% load carts_tag %}{% load thumbnail %}{% block content %}
+{% extends 'base.html' %} {% load static %}{% load carts_tag %}{% load thumbnail %}
+{% block title %}
+Галерея наших работ из мрамора и гранита | Акрополь
+{% endblock %}
+{% block description %}
+На нашем сайты вы можете ознакомится с примерами оформления памятников, надгробий, мемориальных комплексов. Все работы
+выполнены нашими мастерами.
+{% endblock %}
+{% block keywords %}
+наши работы, портфолио памятников на могилу, фотографии памятников на могилу
+{% endblock %}
+{% block content %}
 <main class="page">
   <div class="hero">
     <div class="hero__container">
       <img src="{% static 'theme/mb/images/gallery.png' %}" alt="" class="hero__image" />
       <div class="hero__inner">
         <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
-          <a href="" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem" class="breadcrumbs__item">
+          <a href="" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
+            class="breadcrumbs__item">
             Главная
             <meta itemprop="position" content="1" />
           </a>
@@ -19,12 +31,15 @@
           из мрамора и гранита
         </h1>
         <p class="hero__subtitle">
-          На нашем сайте собран целый каталог фотографий памятников и надгробий изготовленных нашими мастерами. Вы можете посмотреть примеры оформления памятников, надгробий,
-          мемориальных комплексов. Мы профессионально подходим к делу. Вы можете убедится в этом, посмотрев фотографии наших работ.
+          На нашем сайте собран целый каталог фотографий памятников и надгробий изготовленных нашими мастерами. Вы
+          можете посмотреть примеры оформления памятников, надгробий,
+          мемориальных комплексов. Мы профессионально подходим к делу. Вы можете убедится в этом, посмотрев фотографии
+          наших работ.
         </p>
         <div class="hero__buttons">
           <a href="{% url 'category' %}" class="hero__button hero__button--blue">Посмотреть каталог</a>
-          <button type="button" class="hero__button hero__button--small" data-popup="consultation-form" data-order="Услуги">?</button>
+          <button type="button" class="hero__button hero__button--small" data-popup="consultation-form"
+            data-order="Услуги">?</button>
         </div>
       </div>
     </div>
@@ -46,7 +61,8 @@
               {% for image in gallery %}
               <a href="{{ image.image.url }}" data-gall="{{ image.category.slug }}" class="gallery__image">
                 {% thumbnail image.image "368x350" format="WEBP" crop="center" as im %}
-                <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ image.name }}" title="{{ image.name }}" />
+                <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ image.name }}"
+                  title="{{ image.name }}" />
                 {% endthumbnail %}
               </a>
               {% endfor %}
@@ -68,7 +84,8 @@
             </li>
             <li>
               <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
-              <p class="index-contact__list-text"><span>Поможем определиться </span>с типом памятника и заказать его производство</p>
+              <p class="index-contact__list-text"><span>Поможем определиться </span>с типом памятника и заказать его
+                производство</p>
             </li>
             <li>
               <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
@@ -118,7 +135,8 @@
                 <div class="form__agreement">
                   <input type="checkbox" name="agrement" id="id_agrement" checked />
                   <label for="id_agreement" class="form__label">
-                    Я даю свое согласие на обработку персональных данных и соглашаюсь с <a href="">политикой конфиденциальности</a>
+                    Я даю свое согласие на обработку персональных данных и соглашаюсь с <a href="">политикой
+                      конфиденциальности</a>
                   </label>
                 </div>
               </div>
