--- a/#src/templates/theme/pages/service/service.html
+++ b/#src/templates/theme/pages/service/service.html
@@ -1,4 +1,17 @@
-{% extends 'base.html' %} {% load static %} {% block content %}
+{% extends 'base.html' %}
+{% load static %}
+{% block title %}
+Мемориальные услуги компании Акрополь
+{% endblock %}
+{% block description %}
+Заказывайте профессиональные услуги по гравировке на памятниках, установке памятников и благоустройству могил.
+Гарантируем качественное выполнение работ, долговечность и аккуратность. Создайте достойную память о близких с
+"Акрополь"
+{% endblock %}
+{% block keywords %}
+ритуальные услуги томск, мемориальные услуги, ритуальные услуги
+{% endblock %}
+{% block content %}
 
 <main class="page service-page">
   <div class="hero">
@@ -18,7 +31,7 @@
         </div>
         <h1 class="hero__title">
           <span>Мемориальные улуги</span><br />
-          компаниии Акрополь
+          компании Акрополь
         </h1>
         <p class="hero__subtitle">Благоустройство могил включает комплекс работ, направленных на создание
           привлекательного и ухоженного вида захоронения.</p>
