--- a/#src/templates/admin/shop/product/product_edit.html
+++ b/#src/templates/admin/shop/product/product_edit.html
@@ -111,6 +111,10 @@
               {{ form.type_image }} {{ form.type_image.errors }}
               <label for="{{ form.type_image.id_for_label }}" class="form__controls-label">Отображение картинки ? : </label>
             </div>
+            <div class="form__group-checkbox">
+              {{ form.catalog }} {{ form.catalog.errors }}
+              <label for="{{ form.catalog.id_for_label }}" class="form__controls-label">Выводить в каталог ? : </label>
+            </div>
 
             <div class="form__group-checkbox">
               {{ form.status }} {{ form.status.errors }}
