--- a/#src/templates/theme/pages/service/service-test.html
+++ b/#src/templates/theme/pages/service/service-test.html
@@ -1,21 +1,15 @@
 {% extends 'base.html' %} {% load static %}
-{% block title %}
-Установка памятников на могилу в Томске | Акрополь
-{% endblock %}
-{% block description %}
-Компания Акрополь предлагает качественные услуги по установке памятников, надгробий, лавочек и столов. Сохраните
-память о ваших близких с заботой и уважением.
-{% endblock %}
-{% block keywords %}
-установка памятника, установка памятников томск, установка памятника на могилу
-{% endblock %}
+{% block title %} Установка памятников на могилу в Томске | Акрополь {% endblock %}
+{% block description %} Компания Акрополь предлагает качественные услуги по установке памятников, надгробий, лавочек и
+столов. Сохраните память о ваших близких с заботой и уважением. {% endblock %}
+{% block keywords %} установка памятника, установка памятников томск, установка памятника на могилу {% endblock %}
 {% block content %}
 
 <body>
   <div class="wrapper">
     <div class="hero">
       <div class="hero__container">
-        <img src="{% static 'theme/mb/images/ustanovka.png' %}" alt="" class="hero__image" />
+        <img src="{% static 'theme/mb/images/third-image.png' %}" alt="" class="hero__image" />
         <div class="hero__inner">
           <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
             <a href="" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
@@ -54,44 +48,30 @@
           <h2 class="service-content__title _title-h2">Выбор монумента</h2>
           <div class="service-content__row">
             <div class="service-content__col">
-              <img src="{% static 'theme/mb/images/ustanovka-2.png' %}" alt="" class="" />
+              <img src="{% static 'theme/mb/images/second-image.png' %}" alt="" class="" />
             </div>
             <div class="service-content__col">
               <div class="service-content__text _text">
-                <p>
-                  Выбор памятника на могилу — это очень ответственный процесс, который требует внимательности и
-                  тщательного подхода. Ниже я приведу несколько важных факторов,
-                  которые следует учитывать при выборе памятника на могилу:
-                </p>
-                <p>
-                  <span>Материал: </span>памятники на могилы могут быть изготовлены из разных материалов, таких как
-                  гранит, мрамор, искусственные. Необходимо учитывать качество
-                  материала и его прочность, чтобы памятник мог прослужить долгие годы.
-                </p>
-                <p>
-                  <span>Размер: </span>размер памятника на могилу должен соответствовать размерам могилы и не выглядеть
-                  ни слишком маленьким, ни слишком большим. Необходимо
-                  учитывать допустимые размеры памятника.
-                </p>
-                <p>
-                  <span>Дизайн: </span>дизайн памятника на могилу должен отражать индивидуальность и личность усопшего,
-                  а также соответствовать его предпочтениям и желаниям. Можно
-                  выбрать разные декоративные элементы, такие как растительные орнаменты, символы религии, портреты,
-                  фотографии и т.д.
-                </p>
-                <p>
-                  <span>Стоимость: </span>стоимость памятника на могилу может значительно варьироваться в зависимости от
-                  материала, дизайна и сложности изготовления. Необходимо
-                  учитывать свой бюджет при выборе памятника.
+                <p>Выбор памятника на могилу — это очень ответственный процесс, который требует внимательности и
+                  тщательного подхода. Ниже я приведу несколько важных факторов, которые следует учитывать при выборе
+                  памятника на могилу:</p>
+                <p><span>Материал: </span>памятники на могилы могут быть изготовлены из разных материалов, таких как
+                  гранит, мрамор, искусственные. Необходимо учитывать качество материала и его прочность, чтобы памятник
+                  мог прослужить долгие годы.</p>
+                <p><span>Размер: </span>размер памятника на могилу должен соответствовать размерам могилы и не выглядеть
+                  ни слишком маленьким, ни слишком большим. Необходимо учитывать допустимые размеры памятника.</p>
+                <p><span>Дизайн: </span>дизайн памятника на могилу должен отражать индивидуальность и личность усопшего,
+                  а также соответствовать его предпочтениям и желаниям. Можно выбрать разные декоративные элементы,
+                  такие как растительные орнаменты, символы религии, портреты, фотографии и т.д.</p>
+                <p><span>Стоимость: </span>стоимость памятника на могилу может значительно варьироваться в зависимости
+                  от материала, дизайна и сложности изготовления. Необходимо учитывать свой бюджет при выборе памятника.
                 </p>
                 <p><span>Культурные традиции: </span>следует учитывать культурные традиции и обычаи, которые могут
                   регулировать типы и формы памятников на могилы.</p>
                 <p>
-                  <i>
-                    Важно помнить, что выбор памятника на могилу — это личное решение, которое зависит от индивидуальных
-                    предпочтений и ситуации. Поэтому следует уделить достаточно
-                    времени и внимания, чтобы выбрать наиболее подходящий памятник.
-                  </i>
+                  <i> Важно помнить, что выбор памятника на могилу — это личное решение, которое зависит от
+                    индивидуальных предпочтений и ситуации. Поэтому следует уделить достаточно времени и внимания, чтобы
+                    выбрать наиболее подходящий памятник. </i>
                 </p>
               </div>
               <a href="{% url 'category' %}" class="service-content__btn _btn">Перейти в каталог</a>
@@ -106,27 +86,20 @@
           <h2 class="service-content__title _title-h2">Гранит и мрамор: в чём разница?</h2>
           <div class="service-content__row">
             <div class="service-content__col">
-              <img src="{% static 'theme/mb/images/ustanovka-3.png' %}" alt="" class="" />
+              <img src="{% static 'theme/mb/images/third-image.png' %}" alt="" class="" />
             </div>
             <div class="service-content__col">
               <div class="service-content__text _text">
-                <p>
-                  <span>Гранит</span> является более плотным материалом, малопористым, а следовательно, и более прочным.
-                  Благодаря этому качеству памятники из такого камня
-                  сохраняются на века, прекрасно перенося любые климатические условия, оставаясь практически неизменными
-                  на протяжении всего этого времени.
+                <p><span>Гранит</span> является более плотным материалом, малопористым, а следовательно, и более
+                  прочным. Благодаря этому качеству памятники из такого камня сохраняются на века, прекрасно перенося
+                  любые климатические условия, оставаясь практически неизменными на протяжении всего этого времени.</p>
+                <p><span>Мрамор</span> же по своей структуре более порист, он обладает способностью впитывать воду,
+                  которая при замерзании ведёт к образованию трещин. И гранит, и мрамор часто используются при создании
+                  ритуальных памятников. Оба материала ассоциируются с вечностью, непоколебимостью, монументальностью.
                 </p>
-                <p>
-                  <span>Мрамор</span> же по своей структуре более порист, он обладает способностью впитывать воду,
-                  которая при замерзании ведёт к образованию трещин. И гранит, и
-                  мрамор часто используются при создании ритуальных памятников. Оба материала ассоциируются с вечностью,
-                  непоколебимостью, монументальностью.
-                </p>
-                <p>
-                  Разница между памятниками из <span>гранита</span> и <span>мрамора</span> заключается, собственно, в
-                  самом материале, у которого есть свои объективные свойства. Их
-                  необходимо учитывать при заказе надгробия.
-                </p>
+                <p>Разница между памятниками из <span>гранита</span> и <span>мрамора</span> заключается, собственно, в
+                  самом материале, у которого есть свои объективные свойства. Их необходимо учитывать при заказе
+                  надгробия.</p>
               </div>
               <button class="service-content__btn _btn" data-popup="consultation-form"
                 data-order="Установка памятников">Получить консультацию</button>
@@ -142,7 +115,7 @@
             этапы</h2>
           <div class="service-content__row">
             <div class="service-content__col">
-              <img src="{% static 'theme/mb/images/ustanovka.png' %}" alt="" class="" />
+              <img src="{% static 'theme/mb/images/fouth-image.png' %}" alt="" class="" />
             </div>
             <div class="service-content__col">
               <div class="service-content__text _text">
@@ -158,12 +131,10 @@
                   <li>Установка самого памятника вручную или с использованием крана-манипулятора</li>
                   <li>Благоустройство вокруг надмогильного сооружения</li>
                 </ul>
-                <p>
-                  Необходимо помнить о том, что монтаж памятника – это трудоемкий и непростой процесс, требующий опыта и
-                  квалификации. Если в ходе монтажа будут допущены ошибки,
-                  это может привести к перекосу монумента или его полному уходу под землю. Чтобы избежать такой проблемы
-                  необходимо заказать установку памятника специалистам.
-                </p>
+                <p>Необходимо помнить о том, что монтаж памятника – это трудоемкий и непростой процесс, требующий опыта
+                  и квалификации. Если в ходе монтажа будут допущены ошибки, это может привести к перекосу монумента или
+                  его полному уходу под землю. Чтобы избежать такой проблемы необходимо заказать установку памятника
+                  специалистам.</p>
               </div>
               <button class="service-content__btn _btn" data-popup="order-service"
                 data-order="Установка памятников">Заказать установку памятника</button>
