--- a/#src/templates/admin/shop/product/product_edit.html
+++ b/#src/templates/admin/shop/product/product_edit.html
@@ -16,6 +16,7 @@
           <button type="button" data-name="seo" class="page__head-btn">Поля SEO</button>
           <button type="button" data-name="char" class="page__head-btn">Характеристики</button>
         </div>
+        <a href="{% url 'product_add' %}">Добавить новый</a>
         <button type="submit" class="form__btn">
           <img src="{% static 'theme/mb/images/admin/save.svg' %}" alt="" />
           Сохранить
