--- a/main/core/theme/mb/templates/pages/catalog/category-details.html
+++ b/main/core/theme/mb/templates/pages/catalog/category-details.html
@@ -52,7 +52,7 @@
           </form>
         </div>
         {% endif %}
-        <div class="category-details__col">
+        <div class="category-details__col category-details__col--last">
           <button type="button" class="category-details__filter"><i
               class="fa-solid fa-arrow-up-wide-short"></i></button>
           {% if products %}
